--- a/Addressbook/build.gradle
+++ b/Addressbook/build.gradle
@@ -6,4 +6,5 @@ repositories {
 
 dependencies {
     implementation 'org.testng:testng:7.5'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.2.2'
 }
